--- a/team.html
+++ b/team.html
@@ -39,19 +39,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="./index.html#about">Virtual Reality Club</a>
+                <a class="navbar-brand topnav" href="./home.html#about">Virtual Reality Club</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="./index.html#about">About</a>
+                        <a href="./home.html#about">About</a>
                     </li>
                     <li>
-                        <a href="./index.html#services">Services</a>
+                        <a href="./home.html#services">Services</a>
                     </li>
                     <li>
-                        <a href="./index.html#contact">Contact</a>
+                        <a href="./home.html#contact">Contact</a>
                     </li>
                     <li>
                         <a href="./team.html">Team</a>
