fixed typo error

--- a/home.html
+++ b/home.html
@@ -247,7 +247,7 @@
                             <a href="./team.html">Team</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">&copy; Virtual Reality Club 2017 builty by K.</p>
+                    <p class="copyright text-muted small">&copy; Virtual Reality Club All rights reserved, built by Kirby.</p>
                 </div>
             </div>
         </div>
