--- a/team.html
+++ b/team.html
@@ -133,7 +133,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>&copy; Virtual Reality Club 2017 built by K.</p>
+                    <p>&copy; Virtual Reality Club All rights reserved, built by Kirby..</p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
