--- a/team.html
+++ b/team.html
@@ -88,42 +88,42 @@
                 <h3>
                 Yasmin
                 </h3>
-                <p>Im prettier than Ms. Dallal</p>
+                <p>Description</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="img/lady.jpg" alt="">
                 <h3>
                 Yasmin
                 </h3>
-                <p>Im prettier than Ms. Dallal</p>
+                <p>Description</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="img/lady.jpg" alt="">
                 <h3>
                 Yasmin
                 </h3>
-                <p>Im prettier than Ms. Dallal</p>
+                <p>Description</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="img/lady.jpg" alt="">
                 <h3>
                 Yasmin
                 </h3>
-                <p>Im prettier than Ms. Dallal</p>
+                <p>Description</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="img/lady.jpg" alt="">
                 <h3>
                 Yasmin
                 </h3>
-                <p>Im prettier than Ms. Dallal</p>
+                <p>Description</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="img/lady.jpg" alt="">
                 <h3>
                 Yasmin
                 </h3>
-                <p>Im prettier than Ms. Dallal</p>
+                <p>Description</p>
             </div>
         </div>
 
@@ -133,7 +133,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>&copy; Virtual Reality Club All rights reserved, built by Kirby..</p>
+                    <p>&copy; Virtual Reality Club All rights reserved, built by Kirby.</p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
